fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,6 +107,13 @@ section {
   display: block;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   line-height: 1;
 }
